--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <canvas id="simulationCanvas"></canvas>
+  <script src="sensor.js"></script>
   <script src="utils.js"></script>
   <script src="road.js"></script>
   <script src="controls.js"></script>
